--- a/client/css/site.css
+++ b/client/css/site.css
@@ -16,7 +16,7 @@
 body {
 	background-color: #F0F0FA;
 	margin: 0;
-	padding-top: 100px;
+	padding-top: 80px;
 	background: url(../splashes/1920.jpg) no-repeat 50% 100% fixed;
 	background-size: cover;
 	background-position: center;
@@ -32,6 +32,7 @@ body {
 	position: relative;
 	overflow: hidden;
 	margin-bottom:20px;
+	margin-top:30px;
 }
 
 #loginbox {
@@ -83,6 +84,10 @@ footer {
 	position:fixed;
 }
 
+.postContainer {
+	padding-bottom:0px;
+}
+
 @media (max-width:767px) { 
 	.profileContainer {
 		display:none;
@@ -93,6 +98,8 @@ footer {
 	}
 }
 
-.postContainer {
-	padding-bottom:0px;
+@media (max-width:979px) { 
+	#pagecontent {
+		margin-top:80px;
+	}
 }
